--- a/manifest.json
+++ b/manifest.json
@@ -21,7 +21,7 @@
   ],
   "lang": "en-US",
   "id": "/whitesandbox/index.html",
-  "start_url": "./index.html",
+  "start_url": "/whitesandbox/index.html",
   "display": "standalone",
   "background_color": "white",
   "theme_color": "white"
